# ergot-demo

./: .gitignore  CLAUDE.md  README.md  components.d.ts  index.html  package.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml
.vite-hooks/: pre-commit
src/: App.vue  main.ts
src/__tests__/: keyboard.test.ts  wasm-api.test.ts
src/components/: BusNode.vue  ErgotNode.vue  FrameInspector.vue  HelpModal.vue
src/stores/: topology.ts
src/utils/: keyboard.ts
wasm/: Cargo.toml
wasm/src/: duplex.rs  lib.rs  node.rs
wasm/src/node/: bus.rs  frame_tap.rs  impairment.rs  seed.rs  transport.rs
