[package]
name = "ergot-demo-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
ergot = { path = "../../../rust/ergot-wasm/crates/ergot", default-features = false, features = [
  "std",
  "futures-io",
] }
futures-io = "0.3.32"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.92"
log = "0.4.29"
mutex = "1.0.2"
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.94", features = ["console"] }
