[package]
name = "ergot-demo-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
embassy-futures = "0.1.2"
ergot = { git = "https://github.com/okhsunrog/ergot", branch = "wasm-support", default-features = false, features = [
  "std",
  "futures-io",
] }
futures-channel = "0.3.32"
futures-core = "0.3.32"
futures-io = "0.3.32"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3.92"
log = "0.4.29"
maitake-sync = "0.3"
mutex = "1.0.2"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
tsify-next = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
web-sys = { version = "0.3.94", features = ["console"] }

# For local ergot development, point the git dependency at a checkout instead
# (e.g. a worktree of the wasm-support branch):
#
# [patch."https://github.com/okhsunrog/ergot"]
# ergot = { path = "../../../rust/ergot-wasm/crates/ergot" }
